--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
         <div class="panel">
           <p>
             O marmitech acontece de segunda à sexta ao meio dia no instagram
-            da Rocketseat e na Twich da Jakeliny Gracielly.
+            da <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank"
+          >Rocketseat.</a
+        > e na Twich da <a href="https://www.twitch.tv/jakeliny" target="_blank"
+          >Jakeliny Gracielly.</a
+        >
           </p>
         </div>
         <button class="toggle">Quais temas são tratados no marmitech?</button>
@@ -42,7 +46,9 @@
           <p>
             O marmitech é focado em ajudar Dev's iniciantes e a cada semana a
             Jakeliny coloca os temas de cada dia e os convidados de cada dia no
-            instagram dela.
+            instagram dela <a href=" https://www.instagram.com/jakeliny.gracielly/" target="_blank"
+          >Jakeliny Gracielly.</a
+        >
           </p>
         </div>
         <button class="toggle">
@@ -95,17 +101,25 @@
         </button>
         <div class="panel">
           <p>
-            Existe atualmente três programas na Rocketseat em que você pode
-            iniciar. Sendo o primeiro deles o Discover que é um programa de
+            Existe atualmente quatro programas na Rocketseat em que você pode
+            iniciar. Sendo o primeiro deles o <a href="https://app.rocketseat.com.br/discover" target="_blank"
+          >Discover</a> que é um programa de
             aulas 100% gratuito onde você vai aprender o báciso de HTML , CSS e
             JavaScritp onde você aprenderá os fundamentos básicos para iniciar a
-            sua jornada como Dev. A segunda forma é através do Explorer que é
+            sua jornada como Dev. A segunda forma é através do <a href="https://www.rocketseat.com.br/explorer" target="_blank"
+          >Explorer</a
+        >  que é
             uma mentoria para novos Dev's que querem potencializar a sua forma
             de aprendizado e sua entrada no mercado de trabalho. E a terceira é
-            através do Ignite que também é uma mentoria, mas para quem já
+            através do <a href="https://www.rocketseat.com.br/ignite" target="_blank"
+          >Ignite</a
+        >  que também é uma mentoria, mas para quem já
             conquistou o primeiro emprego e quer aprofundar os seus
             conhecimentos; dentro do Ignite temos três trilhas React,
-            React-Native e Node.
+            React-Native e Node. E a quarta é através do <a href="https://app.rocketseat.com.br/discover" target="_blank"
+          >Rocketseat Plus</a> , assinantes Plus tem acesso aos conteúdos em alto nível para estarem 
+            sempre à frente no mercado, participam de encontros ao vivo com Creators, 
+            concorrem a sorteios de produtos Rocketseat e muito mais.
           </p>
         </div>
       </main>
