--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           >Ignite</a
         >  que também é uma mentoria, mas para quem já
             conquistou o primeiro emprego e quer aprofundar os seus
-            conhecimentos; dentro do Ignite temos três trilhas React,
+            conhecimentos; Dentro do Ignite temos três trilhas React,
             React-Native e Node. E a quarta é através do <a href="https://app.rocketseat.com.br/discover" target="_blank"
           >Rocketseat Plus</a> , assinantes Plus tem acesso aos conteúdos em alto nível para estarem 
             sempre à frente no mercado, participam de encontros ao vivo com Creators, 
