--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         <button class="toggle">O que é o Marmitech?</button>
         <div class="panel">
           <p>
-            É uma mentoria online gratuita oferecida pela Rocketseat e conduzido
-            pela Jakeliny Gracielly com o intuito de ajudar Dev's que estão
+            É uma mentoria online gratuita oferecida pela <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank"
+          >Rocketseat</a> e conduzido
+            pela <a href=" https://www.instagram.com/jakeliny.gracielly/" target="_blank"
+          >Jakeliny Gracielly </a> com o intuito de ajudar Dev's que estão
             iniciando carreira na área do desenvolvimento web.
           </p>
         </div>
@@ -35,8 +37,7 @@
           <p>
             O marmitech acontece de segunda à sexta ao meio dia no instagram
             da <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank"
-          >Rocketseat.</a
-        > e na Twich da <a href="https://www.twitch.tv/jakeliny" target="_blank"
+          >Rocketseat.</a> e na Twich da <a href="https://www.twitch.tv/jakeliny" target="_blank"
           >Jakeliny Gracielly.</a
         >
           </p>
@@ -47,8 +48,7 @@
             O marmitech é focado em ajudar Dev's iniciantes e a cada semana a
             Jakeliny coloca os temas de cada dia e os convidados de cada dia no
             instagram dela <a href=" https://www.instagram.com/jakeliny.gracielly/" target="_blank"
-          >Jakeliny Gracielly.</a
-        >
+          >Jakeliny Gracielly.</a>
           </p>
         </div>
         <button class="toggle">
@@ -56,7 +56,8 @@
         </button>
         <div class="panel">
           <p>
-            A rocketseat tem um curso GRATUITO chamado descover. Onde você
+            A rocketseat tem um curso GRATUITO chamado <a href="https://app.rocketseat.com.br/discover" target="_blank"
+          >Discover</a>. Onde você
             aprenderá o básico para iniciar sua carreira na programação web e
             descobrir se está é realmente a sua praia.
           </p>
