--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <p>
             O marmitech acontece de segunda à sexta ao meio dia no instagram
             da <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank"
-          >Rocketseat.</a> e na Twitch da <a href="https://www.twitch.tv/jakeliny" target="_blank"
+          >Rocketseat</a> e na Twitch da <a href="https://www.twitch.tv/jakeliny" target="_blank"
           >Jakeliny Gracielly.</a
         >
           </p>
