--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
         <button class="toggle">O que é o Marmitech?</button>
         <div class="panel">
           <p>
-            É uma mentoria online gratuita oferecida pela <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank"
-          >Rocketseat</a> e conduzido
-            pela <a href=" https://www.instagram.com/jakeliny.gracielly/" target="_blank"
-          >Jakeliny Gracielly </a> com o intuito de ajudar Dev's que estão
-            iniciando carreira na área do desenvolvimento web.
+            É uma mentoria aberta online gratuita oferecida pela <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank"
+          >Rocketseat</a> e conduzido pela <a href=" https://www.instagram.com/jakeliny.gracielly/" target="_blank"
+          >Jakeliny Gracielly </a> com o intuito de ajudar Dev's 
+            em inicio de carreira e meio de carreira com assuntos sobre sof skills, mentalidade de crescimento e construção sólida de carreira.
           </p>
         </div>
         <button class="toggle">
