--- a/index.html
+++ b/index.html
@@ -23,10 +23,21 @@
         <button class="toggle">O que é o Marmitech?</button>
         <div class="panel">
           <p>
-            É uma mentoria aberta online gratuita oferecida pela <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank"
-          >Rocketseat</a> e conduzido pela <a href=" https://www.instagram.com/jakeliny.gracielly/" target="_blank"
-          >Jakeliny Gracielly </a> com o intuito de ajudar Dev's 
-            em inicio de carreira e meio de carreira com assuntos sobre sof skills, mentalidade de crescimento e construção sólida de carreira.
+            É uma mentoria aberta online gratuita oferecida pela
+            <a
+              href="https://www.instagram.com/rocketseat_oficial/"
+              target="_blank"
+              >Rocketseat</a
+            >
+            e conduzido pela
+            <a
+              href=" https://www.instagram.com/jakeliny.gracielly/"
+              target="_blank"
+              >Jakeliny Gracielly
+            </a>
+            com o intuito de ajudar Dev's em inicio de carreira e meio de
+            carreira com assuntos sobre sof skills, mentalidade de crescimento e
+            construção sólida de carreira.
           </p>
         </div>
         <button class="toggle">
@@ -34,20 +45,34 @@
         </button>
         <div class="panel">
           <p>
-            O marmitech acontece de segunda à sexta ao meio dia no instagram
-            da <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank"
-          >Rocketseat</a> e na Twitch da <a href="https://www.twitch.tv/jakeliny" target="_blank"
-          >Jakeliny Gracielly.</a
-        >
+            O marmitech acontece de segunda à sexta ao meio dia no instagram da
+            <a
+              href="https://www.instagram.com/rocketseat_oficial/"
+              target="_blank"
+              >Rocketseat</a
+            >
+            e na Twitch da
+            <a href="https://www.twitch.tv/jakeliny" target="_blank"
+              >Jakeliny Gracielly.</a
+            >
           </p>
         </div>
         <button class="toggle">Quais temas são tratados no marmitech?</button>
         <div class="panel">
           <p>
-            O marmitech é focado em ajudar Dev's iniciantes e a cada semana a
-            Jakeliny coloca os temas de cada dia e os convidados de cada dia no
-            instagram dela <a href=" https://www.instagram.com/jakeliny.gracielly/" target="_blank"
-          >Jakeliny Gracielly.</a>
+            O marmitech é uma mentoria aberta sobre carreira, tecnologia e
+            crescimento profissional. A cada semana a Jakeliny coloca os temas
+            de cada dia e os convidados de cada dia no instagram dela
+            <a
+              href=" https://www.instagram.com/jakeliny.gracielly/"
+              target="_blank"
+              >@jakeliny.gracielly </a
+            >.
+            <a
+              href=" https://www.instagram.com/jakeliny.gracielly/"
+              target="_blank"
+              >Jakeliny Gracielly.</a
+            >
           </p>
         </div>
         <button class="toggle">
@@ -55,10 +80,11 @@
         </button>
         <div class="panel">
           <p>
-            A rocketseat tem um curso GRATUITO chamado <a href="https://app.rocketseat.com.br/discover" target="_blank"
-          >Discover</a>. Onde você
-            aprenderá o básico para iniciar sua carreira na programação web e
-            descobrir se está é realmente a sua praia.
+            A rocketseat tem um curso GRATUITO chamado
+            <a href="https://app.rocketseat.com.br/discover" target="_blank"
+              >Discover</a
+            >. Onde você aprenderá o básico para iniciar sua carreira na
+            programação web e descobrir se está é realmente a sua praia.
           </p>
         </div>
         <button class="toggle">
@@ -79,9 +105,9 @@
         <div class="panel">
           <p>
             Não! Uma das maiores vantagens de se trabalhar na área da
-            programação é que não existe distinção de idade, seja você mais novo
-            ou mais velho. Caso você seja menor de idade, o que você vai
-            precisar é ter a idade miníma necessária.
+            programação é que não existe distinção de idade, de 0 a 200. Caso
+            você seja menor de idade e queira já buscar um emprego terá de ficar
+            de olho em programas como Menor Aprendiz.
           </p>
         </div>
         <button class="toggle">
@@ -102,24 +128,34 @@
         <div class="panel">
           <p>
             Existe atualmente quatro programas na Rocketseat em que você pode
-            iniciar. Sendo o primeiro deles o <a href="https://app.rocketseat.com.br/discover" target="_blank"
-          >Discover</a> que é um programa de
-            aulas 100% gratuito onde você vai aprender o báciso de HTML , CSS e
-            JavaScritp onde você aprenderá os fundamentos básicos para iniciar a
-            sua jornada como Dev. A segunda forma é através do <a href="https://www.rocketseat.com.br/explorer" target="_blank"
-          >Explorer</a
-        >  que é
-            uma mentoria para novos Dev's que querem potencializar a sua forma
-            de aprendizado e sua entrada no mercado de trabalho. E a terceira é
-            através do <a href="https://www.rocketseat.com.br/ignite" target="_blank"
-          >Ignite</a
-        >  que também é uma mentoria, mas para quem já
-            conquistou o primeiro emprego e quer aprofundar os seus
-            conhecimentos; Dentro do Ignite temos três trilhas React,
-            React-Native e Node. E a quarta é através do <a href="https://app.rocketseat.com.br/discover" target="_blank"
-          >Rocketseat Plus</a> , assinantes Plus tem acesso aos conteúdos em alto nível para estarem 
-            sempre à frente no mercado, participam de encontros ao vivo com Creators, 
-            concorrem a sorteios de produtos Rocketseat e muito mais.
+            iniciar. Sendo o primeiro deles o
+            <a href="https://app.rocketseat.com.br/discover" target="_blank"
+              >Discover</a
+            >
+            que é um programa de aulas 100% gratuito onde você vai aprender o
+            báciso de HTML , CSS e JavaScritp onde você aprenderá os fundamentos
+            básicos para iniciar a sua jornada como Dev. A segunda forma é
+            através do
+            <a href="https://www.rocketseat.com.br/explorer" target="_blank"
+              >Explorer</a
+            >
+            que é uma mentoria para novos Dev's que querem potencializar a sua
+            forma de aprendizado e sua entrada no mercado de trabalho. E a
+            terceira é através do
+            <a href="https://www.rocketseat.com.br/ignite" target="_blank"
+              >Ignite</a
+            >
+            que também é uma mentoria, mas para quem já conquistou o primeiro
+            emprego e quer aprofundar os seus conhecimentos; Dentro do Ignite
+            temos três trilhas React, React-Native e Node. E a quarta é através
+            do
+            <a href="https://app.rocketseat.com.br/discover" target="_blank"
+              >Rocketseat Plus</a
+            >
+            , assinantes Plus tem acesso aos conteúdos em alto nível para
+            estarem sempre à frente no mercado, participam de encontros ao vivo
+            com Creators, concorrem a sorteios de produtos Rocketseat e muito
+            mais.
           </p>
         </div>
       </main>
