--- a/index.html
+++ b/index.html
@@ -110,11 +110,10 @@
         </button>
         <div class="panel">
           <p>
-            Não. Você pode aprender programação de forma informal na internet
-            (como no YouTube por exemplo) e ser contratado por uma empresa
-            através de processo seletivo. Mas, existem casos especificos para
-            alguns cargos que é necessário sim uma graduação. Isso geralmente é
-            especificado no anúncio da vaga.
+            Não. Você pode aprender programação de forma autônoma  (como no Discover ou YouTube por exemplo) e 
+            ser contratado por uma empresa através de processos seletivos. Mas, existem casos específicos para 
+            alguns cargos que é necessário sim uma graduação como em alguns bancos ou algumas empresas no exterior, 
+            geralmente é especificado no anúncio da vaga.
           </p>
         </div>
         <button class="toggle">
