Texto atualizado com a ajuda da Jake

--- a/index.html
+++ b/index.html
@@ -121,35 +121,37 @@
         </button>
         <div class="panel">
           <p>
-            Existe atualmente quatro programas na Rocketseat em que você pode
-            iniciar. Sendo o primeiro deles o
+            Existe atualmente quatro programas na
+            <a href="https://app.rocketseat.com.br" target="_blank"
+              >Rocketseat</a
+            >
+            em que você pode iniciar. <br /><br />
+            Sendo o primeiro deles o
             <a href="https://app.rocketseat.com.br/discover" target="_blank"
               >Discover</a
             >
-            que é um programa de aulas 100% gratuito onde você vai aprender o
-            báciso de HTML , CSS e JavaScritp onde você aprenderá os fundamentos
-            básicos para iniciar a sua jornada como Dev. A segunda forma é
-            através do
+            que é um programa de aulas 100% gratuito onde você vai aprender
+            desde como o computador e a internet funciona, passando por
+            programação como lógica de progração, HTML , CSS e JavaScritp onde
+            você aprenderá os fundamentos básicos para iniciar a sua jornada
+            como Dev ate o básico de React, NodeJS e banco de dados.
+            <br /><br />
+            A segunda forma é através do
             <a href="https://www.rocketseat.com.br/explorer" target="_blank"
               >Explorer</a
-            >
-            que é uma mentoria para novos Dev's que querem potencializar a sua
-            forma de aprendizado e sua entrada no mercado de trabalho. E a
-            terceira é através do
+            >, um programa para novos Dev's que querem potencializar a sua forma
+            de aprendizado e sua entrada no mercado de trabalho. <br /><br />
+            A terceira forma é através do
             <a href="https://www.rocketseat.com.br/ignite" target="_blank"
               >Ignite</a
-            >
-            que também é uma mentoria, mas para quem já conquistou o primeiro
-            emprego e quer aprofundar os seus conhecimentos; Dentro do Ignite
-            temos três trilhas React, React-Native e Node. E a quarta é através
-            do
+            >, um programa para quem já entrou na área e quer aprofundar os seus
+            conhecimentos em React, React-Native e Node. <br /><br />
+            A quarta forma é através do
             <a href="https://app.rocketseat.com.br/discover" target="_blank"
               >Rocketseat Plus</a
-            >
-            , assinantes Plus tem acesso aos conteúdos em alto nível para
-            estarem sempre à frente no mercado, participam de encontros ao vivo
-            com Creators, concorrem a sorteios de produtos Rocketseat e muito
-            mais.
+            >, uma plataforma de conteúdos on demand, assinantes PLUS participam
+            de encontros ao vivo com Creators, tem acesso a todas as NLW já
+            feitas, concorrem a sorteios de produtos Rocketseat e muito mais.
           </p>
         </div>
       </main>
